--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "@angular/compiler-cli": "^14.1.0",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.2.0",
+    "json-server": "^1.0.0-alpha.21",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "nodemon": "^3.0.2",
     "typescript": "~4.7.2"
   }
 }
